[gd_scene load_steps=6 format=3 uid="uid://byin7p8hks717"]

[ext_resource type="Texture2D" uid="uid://c2ke4qunwvw6b" path="res://Asset/Interfaces/Background.png" id="1_lloet"]
[ext_resource type="Script" path="res://Interfaces/Results.gd" id="1_oy7b0"]
[ext_resource type="FontFile" uid="uid://y0briuxltlvm" path="res://Asset/Open_Sans/static/OpenSans-Bold.ttf" id="3_dki4r"]
[ext_resource type="FontFile" uid="uid://cqougaypxa5uy" path="res://Asset/Open_Sans/static/OpenSans-SemiBoldItalic.ttf" id="3_rk8t5"]
[ext_resource type="FontFile" uid="uid://cbb4snx7gf8dh" path="res://Asset/Open_Sans/static/OpenSans-BoldItalic.ttf" id="5_qkper"]

[node name="Results" type="CanvasLayer"]
script = ExtResource("1_oy7b0")

[node name="Background" type="NinePatchRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_lloet")
region_rect = Rect2(88, 105.5, 472, 431)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80

[node name="Header" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -349.0
offset_top = 54.0
offset_right = 349.0
offset_bottom = 194.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.784314, 0.235294, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_dki4r")
theme_override_font_sizes/font_size = 100
text = "Récapitulatif :
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -903.5
offset_top = -239.5
offset_right = 903.5
offset_bottom = -124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="Acceptability" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Background/VBoxContainer/Acceptability"]
layout_mode = 1
offset_top = -35.0
offset_right = 271.0
offset_bottom = 3.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rk8t5")
theme_override_font_sizes/font_size = 30
text = "Niveau d'acceptabilité :"

[node name="Value" type="Label" parent="Background/VBoxContainer/Acceptability"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_top = -35.0
offset_bottom = -9.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qkper")
theme_override_font_sizes/font_size = 25
text = "0 %"
horizontal_alignment = 2

[node name="Legality" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Background/VBoxContainer/Legality"]
layout_mode = 1
offset_top = -35.0
offset_right = 271.0
offset_bottom = 3.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rk8t5")
theme_override_font_sizes/font_size = 30
text = "Conséquences légales :"

[node name="Value" type="Label" parent="Background/VBoxContainer/Legality"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_top = -35.0
offset_bottom = -9.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_qkper")
theme_override_font_sizes/font_size = 25
text = "0 %"
horizontal_alignment = 2

[node name="Checkboxes" type="VBoxContainer" parent="Background"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -49.0
offset_right = 275.0
offset_bottom = 351.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.971
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -460.5
offset_top = -98.6801
offset_right = 460.5
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 125
alignment = 1

[node name="ButtonMenu" type="Button" parent="Background/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "MENU"

[node name="ButtonNextScene" type="Button" parent="Background/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "SCÈNE SUIVANTE"

[node name="ButtonValidate" type="Button" parent="Background/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "VALIDER"

[connection signal="drag_ended" from="Background/VBoxContainer/Acceptability" to="." method="_on_acceptability_changed"]
[connection signal="drag_ended" from="Background/VBoxContainer/Legality" to="." method="_on_legality_changed"]
